# APluginLibrary

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
SDK/APluginLibrary/: featuremanager.h  pluginapi.h  plugininfos.h
SDK/APluginLibrary/implementation/: featuremanager.ipp  macros.ipp  pluginapi.cpp  pluginapi.ipp
SDK/APluginSDK/: .gitrepo
doc/: doxygen.cfg  plugininfos.cpp  plugininfos.doc  style.css
include/APluginLibrary/: alibraryloader.h  alibraryloader.tpp  apluginapi.h  aplugininfos.h  libraryloader.h  libraryloader.tpp  plugin.h  pluginapi.h  plugininfos.h  pluginmanager.h  pluginmanagerobserver.h
include/APluginLibrary/implementation/: libraryloader.tpp  pluginmanager.tpp
libs/dlfcn/: CMakeLists.txt
libs/dlfcn/dlfcn-win32/: .gitrepo
libs/tinydir/tinydir/: .gitrepo
src/: alibraryloader.cpp  libraryloader.cpp  plugin.cpp  pluginmanager.cpp  pluginmanagerobserver.cpp
src/private/: pluginmanagerprivate.cpp  pluginmanagerprivate.h  pluginprivate.h
src/private/src/: pluginmanagerprivate.cpp  pluginprivate.cpp
tests/: CMakeLists.txt
tests/libraries/first/: CMakeLists.txt
tests/libraries/first/src/: main.cpp
tests/libraries/second/: CMakeLists.txt
tests/libraries/second/src/: main.cpp
tests/libs/googletest/: .gitrepo
tests/plugins/: include.h  interface.h  interfaces.h  otherinterface.h
tests/plugins/fifth/: CMakeLists.txt
tests/plugins/fifth/src/: main.cpp
tests/plugins/first/: CMakeLists.txt
tests/plugins/first/src/: main.c  main.cpp
tests/plugins/fourth/: CMakeLists.txt
tests/plugins/fourth/src/: main.cpp
tests/plugins/second/: CMakeLists.txt
tests/plugins/second/src/: main.cpp  secondgroupmath.cpp  secondgrouppow.cpp
tests/plugins/seventh/: CMakeLists.txt
tests/plugins/seventh/src/: class.cpp  feature.cpp  main.cpp
tests/plugins/sixth/: CMakeLists.txt
tests/plugins/sixth/src/: main.cpp
tests/plugins/third/: CMakeLists.txt
tests/plugins/third/src/: main.cpp
tests/src/: alibraryloader_test.cpp  apluginapi_test.cpp  integrated_plugin.cpp  libraryloader_test.cpp  plugin_test.cpp  pluginapi_test.cpp  pluginmanager_test.cpp  test_libraryloader.cpp  test_plugin.cpp  test_pluginapi.cpp  test_pluginmanager.cpp  test_pluginmanagerobserver.cpp
